--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <a href= "directory/laguardia_hall_library.html">
         <img src="image/RedTowel.jpg" alt="comingSoon" style="width:50%;"></a>
         <div class="carousel-caption">
-          <h3>Dancing Couple</h3>
-          <p>William Kentridge<br>1st Floor</p>
+          <h3>Red Towel</h3>
+          <p> Graham Nickson<br>3rd Floor</p>
         </div>   
       </div>
       <div class="carousel-item">
