--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/RedTowel.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/RedTowel.jpg" alt="Red Towel" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Red Towel</h3>
           <p> Graham Nickson<br>3rd Floor</p>
@@ -54,7 +54,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/Wallabout.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/Wallabout.jpg" alt="The Wallabout Market" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>The Wallabout Market</h3>
           <p>R.Adams<br>1st Floor</p>
@@ -62,7 +62,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/VegetableFields.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/VegetableFields.jpg" alt="Vegetable Fields" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Vegetable Fields</h3>
           <p>Xu Bing<br>4th Floor</p>
@@ -70,7 +70,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/BirdoftheWoodsorBirdXVII.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/BirdoftheWoodsorBirdXVII.jpg" alt="Bird of the Woods or Bird XVII" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Bird of the Woods or Bird XVII</h3>
           <p>Georges Braque<br>4th Floor</p>
@@ -78,7 +78,7 @@
       </div>
       <div class="carousel-item">
         <a href= "directory/laguardia_hall_library.html">
-        <img src="image/Autumn.jpg" alt="comingSoon" style="width:50%;"></a>
+        <img src="image/Autumn.jpg" alt="Autumn" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Autumn</h3>
           <p>Alfred Russel<br>3rd Floor</p>
@@ -86,7 +86,7 @@
       </div>
        <div class="carousel-item">
          <a href= "directory/laguardia_hall_library.html">
-         <img src="image/CelestialSpheres.jpg" alt="comingSoon" style="width:50%;"></a>
+         <img src="image/CelestialSpheres.jpg" alt="Celestial Spheres" style="width:50%;"></a>
         <div class="carousel-caption">
           <h3>Celestial Spheres</h3>
           <p>Elizabeth Delson<br>Basement</p>
@@ -123,7 +123,7 @@
     <!-- 1 image-->
     <div class="leftcolumn2">
       <div class="card">
-        <img src="image/Wallabout.jpg" alt="Wallabout" width="250" height="300">
+        <img src="image/Wallabout.jpg" alt="The Wallabout Market" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
@@ -137,7 +137,7 @@
     <!--2nd image-->
     <div class="centercolumn">
       <div class="card">
-        <img src="image/Blinded.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/Blinded.jpg" alt="The Blind Leading the Blind" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
@@ -150,7 +150,7 @@
     <!--3 image-->
     <div class="rightcolumn">
       <div class="card">
-        <img src="image/Aspen.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/Aspen.jpg" alt="Aspen" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
@@ -163,7 +163,7 @@
     <!--4 image-->
     <div class="rightcolumn2">
       <div class="card">
-        <img src="image/EchoingFactors.jpg" alt="comingSoon" width="250" height="300">
+        <img src="image/EchoingFactors.jpg" alt="Echoing Factors" width="250" height="300">
       </div>
       <!--Caption-->
       <div class="card">
