--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <a href="index.html">Home</a>
         <a href="directory.html">Directory</a>
         <a href="info.html">Info</a>
+        <a href="contact.html" style="float:right">Contact</a>
 
         <!--Search tab in html-->
         <form class="example" action="/action_page.php" style="float:right;">
