--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,23 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!--Navigation Bar-->
+  <div>
+    <div class="topnav">
+      <a href="index.html">Home</a>
+      <a href="directory.html">Directory</a>
+      <a href="info.html">Info</a>
+      <a href="contact.html" style="float:right">Contact</a>
+
+      <!--Search tab in html-->
+      <form class="example" action="/action_page.php" style="float:right;">
+        <input type="text" placeholder="Search.." name="search2">
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+    </div>
+  </div>
+  
+  
   <div class="row">
   <div class="leftcolumn">
     <div class="card">
