--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="css/contact.css">
 </head>
 <body>
+    <div class="header">
+    <h1>Brooklyn College Art Directory</h1>
+    </div>
   <!--Navigation Bar-->
   <div>
     <div class="topnav">
