--- a/contact.html
+++ b/contact.html
@@ -38,20 +38,18 @@
       <form>
       <label for="birthday">Birthday:</label>
       <input type="date" id="birthday" name="birthday">
-      <input type="submit">
       </form>
       <!--Asks for email-->
       <form>
       <label for="email">Enter your email:</label>
       <input type="email" id="email" name="email">
-      <input type="submit">
       </form>
       <!--Asks for phone number-->
       <form>
       <label for="phone">Enter a phone number:</label>
       <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-      <input type="submit">
       </form>
+      <!--Javascript for username creation, password creation and comparison-->
       <script> 
             // Function to check Whether both passwords 
             // is same or not. 
@@ -98,8 +96,7 @@
                 <td><input type = password name = password2 maxlength=8></td> 
             </tr> 
             <tr> 
-                <td colspan = 1 align = right> 
-                <input type = submit value = "Submit"></td> 
+                <td colspan = 1 align = right></td> 
             </tr> 
         </table> 
         </form> 
