--- a/contact.html
+++ b/contact.html
@@ -33,21 +33,21 @@
     <div class="card">
       <h2>Give some info and we'll contact you later</h2>
       <!--Asks for Name-->
-      <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p>  
+      <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p><br>  
       <!--Asks for birthday-->
       <form>
       <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday">
+      <input type="date" id="birthday" name="birthday"><br>
       </form>
       <!--Asks for email-->
       <form>
       <label for="email">Enter your email:</label>
-      <input type="email" id="email" name="email">
+      <input type="email" id="email" name="email"><br>
       </form>
       <!--Asks for phone number-->
       <form>
       <label for="phone">Enter a phone number:</label>
-      <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+      <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br>
       </form>
       <!--Javascript for username creation, password creation and comparison-->
       <script> 
@@ -83,30 +83,31 @@
             <tr> 
                 <!-- Enter Username -->
                 <td>Username:</td> 
-                <td><input type = text name = username maxlength=8></td> 
+                <td><input type = text name = username maxlength=8></td> <br>
             </tr> 
             <tr> 
                 <!-- Enter Password. -->
                 <td>Password:</td> 
-                <td><input type = password name = password1 maxlength=8></td> 
+                <td><input type = password name = password1 maxlength=8></td><br> 
             </tr> 
             <tr> 
                 <!-- To Confirm Password. -->
                 <td>Confirm Password:</td> 
-                <td><input type = password name = password2 maxlength=8></td> 
+                <td><input type = password name = password2 maxlength=8></td> <br>
             </tr> 
             <tr> 
                 <td colspan = 1 align = right></td> 
             </tr> 
         </table> 
         </form> 
-</div>
-  <br><br><br>
-<form action="index.html" > 
-  <button type="submit" style="float:right">Submit</button>
-</form> 
-    </div>       
-  </div>
-</div>
+        <br><br><br>
+        <!--Submit button-->
+        <form action="index.html" > 
+        <button type="submit" style="float:right">Submit</button>
+        </form> 
+       </div>
+      </div>       
+     </div>
+    </div>
 </body>
 </html>
