--- a/contact.html
+++ b/contact.html
@@ -33,21 +33,21 @@
     <div class="card">
       <h2>Give some info and we'll contact you later</h2>
       <!--Asks for Name-->
-      <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p><br>  
+      <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p>  
       <!--Asks for birthday-->
       <form>
       <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday"><br>
+      <input type="date" id="birthday" name="birthday">
       </form>
       <!--Asks for email-->
       <form>
       <label for="email">Enter your email:</label>
-      <input type="email" id="email" name="email"><br>
+      <input type="email" id="email" name="email">
       </form>
       <!--Asks for phone number-->
       <form>
       <label for="phone">Enter a phone number:</label>
-      <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br>
+      <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
       </form>
       <!--Javascript for username creation, password creation and comparison-->
       <script> 
@@ -83,17 +83,17 @@
             <tr> 
                 <!-- Enter Username -->
                 <td>Username:</td> 
-                <td><input type = text name = username maxlength=8></td> <br>
+                <td><input type = text name = username maxlength=8></td> 
             </tr> 
             <tr> 
                 <!-- Enter Password. -->
                 <td>Password:</td> 
-                <td><input type = password name = password1 maxlength=8></td><br> 
+                <td><input type = password name = password1 maxlength=8></td> 
             </tr> 
             <tr> 
                 <!-- To Confirm Password. -->
                 <td>Confirm Password:</td> 
-                <td><input type = password name = password2 maxlength=8></td> <br>
+                <td><input type = password name = password2 maxlength=8></td>
             </tr> 
             <tr> 
                 <td colspan = 1 align = right></td> 
