--- a/directory/laguardia_hall_library.html
+++ b/directory/laguardia_hall_library.html
@@ -217,9 +217,8 @@
         <strong>Provenance:</strong>	The Brooklyn College Library Collection. © Artist's Estate
         </p>
         <!--Audio-->
-        <audio controls>
-        <source src="RAdams.mp3" type="audio/mpeg">
-        <source src="RAdams.ogg" type="audio/ogg">
+        <audio src="media/R.Adams.mp3" controls="" id="podcast">
+        <script>mediaPlayer('media/R.Adams.mp3')</script><embed src="mp3player.swf" width="200" height="20" bgcolor="#FFFFFF" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer" flashvars="file=media/R.Adams.mp3&amp;backcolor=0xFFFFFF&amp;frontcolor=0x800000&amp;lightcolor=0x363636&amp;showdigits=true&amp;autostart=false&amp;repeat=false&amp;volume=100">
         </audio>
         <!-- Description -->
         <p class="demo2" style="color:white"><br><br><br>
