--- a/index.html
+++ b/index.html
@@ -108,13 +108,15 @@
   <div class="row">
     <div class="leftcolumn">
       <div class="card">
-        <strong>Below is some info:</strong>
+        <strong>Below is some info about the art collection:</strong>
         <br><br>      
-        <p>We are a student operated website created for Brooklyn College students<br>
-        Here you can learn more about the art hanging in our library.</p>
+        <p>Welcome to the online catalogue of Brooklyn College Library's art collection, which includes paintings, drawings, <br>
+          sculptures, photography, and prints.</p>
         <br><br>
-        <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
-        Please type the refrence number to pull up more information about the painting</p>
+        <p>Diverse in character and international in scope, the collection features art by Elizabeth Murray, William Kentridge, <br>
+          Chakaia Booker, Shahzia Sikander, Sarah Sze, John Walker, Edward Ruscha, and Xu Bing. Several of these artists live and <br>
+          work in Brooklyn's dynamic art community, and they are all internationally recognized, with works in major museums around <br>
+          the world.</p>
       </div>
     </div>
   </div>
@@ -180,13 +182,15 @@
   <div class="row">
     <div class="leftcolumn">
       <div class="card">
-        <strong>Below is some info:</strong>
+        <strong>Below is some more info about the art collection:</strong>
         <br><br>      
-        <p>We are a student operated website created for Brooklyn College students<br>
-        Here you can learn more about the art hanging in our library.</p>
+        <p>The collection also contains drawings and prints from prominent modern artists, including Alberto Giacometti, <br>
+          Käthe Kollwitz, Alexander Calder, Georges Braque, Robert Motherwell, and Chaim Gross.</p>
         <br><br>
-        <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
-        Please type the refrence number to pull up more information about the painting</p>
+        <p>Most of the art collection was acquired just before the 2002 opening of the newly renovated and expanded Library. <br>
+          Many of the purchases were funded by New York City's "Percent for Art" law, which ensures that public spaces are graced <br>
+          with art. Numerous other works were acquired through gifts, and some works are on loan. One very special work, Olindo <br>
+          Mario Ricci's Famous Libraries of the World mural, was funded in 1936 by the Federal Arts Project.</p>
       </div>
     </div>
   </div>
