--- a/info.html
+++ b/info.html
@@ -34,11 +34,10 @@
       <div class="card">
         <strong>Below is some info:</strong>
         <br><br>      
-        <p>We are a student operated website created for Brooklyn College students<br>
-        Here you can learn more about the art hanging in our library.</p>
-        <br><br>
-        <p>Every painting has a refrence number under it consisting of 4 numbers and 3 letters,<br>
-        Please type the refrence number to pull up more information about the painting</p>
+        <p>This catalogue includes digital reproductions of the art, brief descriptions that offer <br>
+        insights into the works and artists, suggested readings, and links to museum and gallery exhibitions. <br>
+        It will be updated frequently with links to relevant publications and exhibitions, so please come back regularly!<br><br>
+        For further information about the Library's art collection, please contact us the information is at the bottom.</p>
       </div>
     </div>
   </div>
