Polished websites for consistent design

--- a/directory.html
+++ b/directory.html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Directory</title>
+  <link rel="stylesheet" href="css/style.css">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/directory.css">
+  <!-- BootStrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
   <script type="text/javascript" src="js/imageMapResizer.js"></script>
 </head>
@@ -19,6 +22,7 @@
         <a href="index.html">Home</a>
         <a href="directory.html">Directory</a>
         <a href="info.html">Info</a>
+        <a href="contact.html">Contact</a>
         <!--Search tab in html-->
         <form class="example" action="/action_page.php" style="float:right;">
           <input type="text" placeholder="Search.." name="search2">
@@ -30,9 +34,9 @@
   <!--Card with info-->    
   <div class="row">
     <div class="topcolumn">
-      <div class="card">
-        <h1><strong>Buliding Directory: </strong></h1>
-        <h2>West Quad</h2>
+      <div class="card-dir">
+        <h2><strong>Buliding Directory: </strong></h2>
+        <h3>West Quad</h3>
           <a href="directory/roosevelt_hall.html">Roosevelt Hall</a>
           <br>
           <a href="directory/roosevelt_hall_extension.html">Roosevelt Hall Extension</a>
@@ -42,7 +46,7 @@
           <a href="directory/west_quad.html">West Quad</a>
           <br>
           <a href="directory/william_james_hall.html">William James Hall</a>
-        <h2>East Quad</h2>
+        <h3>East Quad</h3>
           <a href="directory/boylan_hall.html">Boylan Hall</a>
           <br>
           <a href="directory/ingersoll_hall.html">Ingersoll Hall</a>
