--- a/directory/w.e.b_(west_end_buliding).html
+++ b/directory/w.e.b_(west_end_buliding).html
@@ -4,8 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>W.E.B (West End Buliding)</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../css/style.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" href="../image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 
@@ -20,6 +23,7 @@
       <a href="../index.html">Home</a>
       <a href="../directory.html">Directory</a>
       <a href="../info.html">Info</a>
+      <a href="../contact.html">Contact</a>
 
       <!--Search tab in html-->
       <form class="example" action="/action_page.php" style="float:right;">
@@ -32,31 +36,13 @@
   <!--Card with info-->    
   <div class="row">
     <div class="topcolumn">
-      <div class="card">
+      <div class="card-dir">
         <center><h1><strong>W.E.B (West End Buliding)</strong></h1></center>
         <a href="">1st Floor</a>
         <br>
         <a href="">2nd Floor</a>
         <br>
         <center><h3><i>*There is currently no information on art pieces in this building*</i></h3></center>
-      </div>
-    </div>
-  </div>
-
-  <!--Card with info 2-->   
-  <!--Left Side-->
-  <div class="row">
-    <div class="leftcolumn3">
-        <div class="card">   
-          <a href="http://www.brooklyn.cuny.edu/web/home.php">Where To Find Brooklyn College<br><br></a>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3027.9735725859246!2d-73.9543016853186!3d40.630464779340876!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb060f27c5f71c65e!2sBrooklyn%20College%20Bulldogs!5e0!3m2!1sen!2sus!4v1584648691935!5m2!1sen!2sus" width="400" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-        </div>   
-    </div>
-    <!--Right side-->
-    <div class="rightcolumn3">
-      <div class="card">   
-        <a href="https://www.brooklyn.cuny.edu/web/academics/schools/socialsciences/departments/library.php">Where To Find Us<br><br></a>
-        <img src="../image/BrooklynCollegeMap.jpg" alt="Brooklyn College Map" width="400" height="400">
       </div>
     </div>
   </div>
