--- a/contact.html
+++ b/contact.html
@@ -4,20 +4,23 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Contact Page</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
 </head>
 <body>
-    <div class="header">
+  <div class="header">
     <h1>Brooklyn College Art Directory</h1>
-    </div>
+  </div>
   <!--Navigation Bar-->
   <div>
     <div class="topnav">
       <a href="index.html">Home</a>
       <a href="directory.html">Directory</a>
       <a href="info.html">Info</a>
-      <a href="contact.html" style="float:right">Contact</a>
+      <a href="contact.html">Contact</a>
 
       <!--Search tab in html-->
       <form class="example" action="/action_page.php" style="float:right;">
@@ -26,88 +29,39 @@
       </form>
     </div>
   </div>
-  
-  
+
+
   <div class="row">
-   <div class="leftcolumn">
-    <div class="card">
-      <h2>Give some info and we'll contact you later</h2>
-      <!--Asks for Name-->
-      <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p>  
-      <!--Asks for birthday-->
-      <form>
-      <label for="birthday">Birthday:</label>
-      <input type="date" id="birthday" name="birthday">
-      </form>
-      <!--Asks for email-->
-      <form>
-      <label for="email">Enter your email:</label>
-      <input type="email" id="email" name="email">
-      </form>
-      <!--Asks for phone number-->
-      <form>
-      <label for="phone">Enter a phone number:</label>
-      <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
-      </form>
-      <!--Javascript for username creation, password creation and comparison-->
-      <script> 
-            // Function to check Whether both passwords 
-            // is same or not. 
-            function checkPassword(form) { 
-                password1 = form.password1.value; 
-                password2 = form.password2.value; 
-  
-                // If password not entered 
-                if (password1 == '') 
-                    alert ("Please enter Password"); 
-                      
-                // If confirm password not entered 
-                else if (password2 == '') 
-                    alert ("Please enter confirm password"); 
-                      
-                // If Not same return False.     
-                else if (password1 != password2) { 
-                    alert ("\nPassword did not match: Please try again...") 
-                    return false; 
-                } 
-  
-                // If same return True. 
-                else{ 
-                    alert("Password Match!") 
-                    return true; 
-                } 
-            } 
-        </script>
-        <form onSubmit = "return checkPassword(this)"> 
-        <table> 
-            <tr> 
-                <!-- Enter Username -->
-                <td>Username:</td> 
-                <td><input type = text name = username maxlength=8></td> 
-            </tr> 
-            <tr> 
-                <!-- Enter Password. -->
-                <td>Password:</td> 
-                <td><input type = password name = password1 maxlength=8></td> 
-            </tr> 
-            <tr> 
-                <!-- To Confirm Password. -->
-                <td>Confirm Password:</td> 
-                <td><input type = password name = password2 maxlength=8></td>
-            </tr> 
-            <tr> 
-                <td colspan = 1 align = right></td> 
-            </tr> 
-        </table> 
-        </form> 
+    <div class="leftcolumn">
+      <div class="card">
+        <h2>Have any questions?</h2>
+        <h4>Leave a message and we'll get back to you</h4>
+        <!--Asks for Name-->
+        <p>Name: <input type="text" onkeyup="this.value = this.value.toUpperCase();"></p>  
+        <!--Asks for birthday-->
+        <form>
+          <label for="birthday">Birthday: </label>
+          <input type="date" id="birthday" name="birthday">
+        </form>
+        <!--Asks for email-->
+        <form>
+          <label for="email">Enter your email: </label>
+          <input type="email" id="email" name="email">
+        </form>
+        <!--Asks for phone number-->
+        <form>
+          <label for="phone">Enter a phone number: </label>
+          <input type="tel" id="phone" name="phone" placeholder="123-4567-8901" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required>
+        </form>
+        <label>Message: </label>
+        <textarea></textarea>
         <br><br><br>
         <!--Submit button-->
         <form action="index.html" > 
-        <button type="submit" style="float:right">Submit</button>
+          <button type="submit" style="float:right">Submit</button>
         </form> 
-       </div>
-      </div>       
-     </div>
-    </div>
+      </div>
+    </div>       
+  </div>
 </body>
 </html>
