--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <link rel="stylesheet" href="css/style.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--Links for carousel-->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <link rel="icon" href="image/icon/paint_palette.png" type="image/png" sizes="16x16">
@@ -25,7 +27,7 @@
         <a href="index.html">Home</a>
         <a href="directory.html">Directory</a>
         <a href="info.html">Info</a>
-        <a href="contact.html" style="float:right">Contact</a>
+        <a href="contact.html">Contact</a>
 
         <!--Search tab in html-->
         <form class="example" action="/action_page.php" style="float:right;">
