--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,13 @@
         <br><br><br>
         <!--Submit button-->
         <form action="index.html" > 
-          <button type="submit" style="float:right">Submit</button>
+          <button type="submit" onclick="myFunction()" style="float:right">Submit</button>
         </form> 
+        <script>
+        function myFunction() {
+        alert("Thank you for leaving a message!");
+        }
+      </script>
       </div>
     </div>       
   </div>
