--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,7 @@
         <textarea></textarea>
         <br><br><br>
         <!--Submit button-->
+        <form action="index.html" > 
         <!-- Button trigger modal -->
        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" style="float:right">
        Submit
@@ -84,7 +85,7 @@
             </div>
           </div>
         </div>
-          
+       </form>
       </div>
     </div>       
   </div>
