--- a/contact.html
+++ b/contact.html
@@ -70,17 +70,17 @@
           <div class="modal-dialog" role="document">
            <div class="modal-content">
             <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Thank you!</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
             </button>
              </div>
              <div class="modal-body">
-               ...
+               We recieved your message and will contact you later on today.
               </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-primary" onclick="location.href = 'index.html';">Save changes</button>
               </div>
             </div>
           </div>
