--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,22 @@
           </div>
         </div>
        </form>
+    <!--Footer-->
+    <div class="footer">
+    <p>
+      <strong>Contact Information</strong>
+      <br>
+      <strong>Chief Librarian:</strong> Mary Mallery
+      <br>
+      <strong>Location:</strong> 412 Library
+      <br>
+      <strong>Phone:</strong> 718.951.5342
+      <br>
+      <strong>Fax:</strong> 718.951.4557
+    </p>
+    <br>
+    <input class="button"type="button"value="Help" onclick="location.href='info.html'">
+  </div>
       </div>
     </div>       
   </div>
